# meegflow

./: .dockerignore  .gitignore  ADAPTIVE_REJECT_GUIDE.md  CHANGELOG.md  CUSTOM_STEPS_IMPLEMENTATION.md  Dockerfile  Dockerfile.preprocessing  Dockerfile.report  FIND_FLAT_CHANNELS_REVIEW.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_READERS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICK_START.md  READERS.md  README.md  README_preprocessing.md  README_report.md  REFACTORING_SUMMARY.md  SETUP_SUMMARY.md  SPLIT_MODULES_DOCUMENTATION.md  SUMMARY.md  commandes_preprocessing.sh  config_example.json  docker-compose.yml  eeg_preprocessing_pipeline.py  example_usage.py  generate_global_report.py  group_erp.py  pyproject.toml  requirements.txt  run_batch.sh  run_slurm.sh  setup.py  test_pipeline_structure.py
.conda-recipe/: meta.yaml
.github/: copilot-instructions.md
configs/: config_example.yaml  config_liberate_adaptive.yaml  config_liberate_filtered_events.yaml  config_minimal.yaml  config_raw_only.json  config_raw_only.yaml  config_split_workflow.yaml  config_with_adaptive_reject.json  config_with_adaptive_reject.yaml  config_with_custom_steps.yaml  config_with_drop_bad_channels.yaml  config_with_excluded_channels.yaml  example_custom_steps.py  icm_lg.yaml  icm_lga.yaml
qc/: qc_classify.py  qc_mad.py  qc_metrics.py  qc_report.py  run_qc.py
src/: adaptive_reject.py  cli.py  eeg_preprocessing_pipeline.py  meegflow.py  preprocessing_cli.py  preprocessing_pipeline.py  readers.py  report.py  report_cli.py  report_generator.py  (+2 more)
(+20 files in other folders)
